--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -2,7 +2,7 @@
     width: 23%;
     display: flex;
     overflow: hidden;
-    position: relative;
+    position: fixed;
     padding: 0px;
     flex-wrap: wrap;
     flex-direction: column;
@@ -10,8 +10,15 @@
     height: 100vh;
     justify-content: center;
     box-shadow: 5px 0px 5px #d723234f;
+    background-color: #222222;
 }
-
+.App.col-md-9 {
+    margin-right: 0px ;
+    margin-left: auto;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
 nav {
     width: 100%;
     display: flex;
@@ -37,9 +44,9 @@ nav {
     display: flex;
     align-items: center;
     flex-direction: column;
-    border: 1px solid #fff;
+    border: 1px solid rgba(255, 255, 255, 0.37);
     border-width: 0 0 1px 0;
-    padding: 30px 5% 60px;
+    padding: 30px 5% 50px;
 }
 .menu {
     width: 100%;
@@ -80,7 +87,8 @@ ul.listmenu a{
     color: rgba(255, 255, 255, 0.479);
     font-family: "Nunito";
     text-transform: uppercase;
+    transition:all 0.4s ease-in-out;
 }
-ul.listmenu li.active a,ul.listmenu li a:hover{
+ul.listmenu li.active a,ul.listmenu li:hover a{
     color: #fff;
 }
