about-me progress ...

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -10,7 +10,7 @@
     height: 100vh;
     justify-content: center;
     box-shadow: 5px 0px 5px #d723234f;
-    background-color: #222222;
+    background-color: #22222259;
 }
 .pagecurrent.col-md-9 {
     margin-right: 0px ;
