--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -113,6 +113,97 @@ ul.listres li:hover {
 
 
 /* page about me  */
+
+/* img */
+img.myimg-aboutme {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+}
+
+.zoom {
+    background: #f5f5f529;
+    border: unset;
+    padding: 10px 15px;
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    color: #431e1e;
+    opacity: 0;
+    cursor: pointer;
+    transition: all 0.5s;
+    font-size: 40px;
+}
+
+.zoom svg {
+    transform: scale(0);
+    transition: all 0.5s;
+}
+
+.zoom:hover {
+    margin: auto;
+    opacity: 1;
+}
+
+.zoom:hover svg {
+    transform: scale(1)
+}
+/* modal img */
+.modal_img.showmodal {
+    transform: translateY(0);
+    background: #431e1e38;;
+}
+.modal_img {
+    position: absolute;
+    z-index: 9999;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    right: 0px;
+    top: 0;
+    bottom: 0px;
+    margin: auto;
+    background: unset;
+    transition: all 0.3s;
+    transform:translateY(-100%);
+}
+.modal-div {
+    max-height: 500px;
+    width: auto;
+    text-align: center;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: flex-start;
+}
+
+img.myimg-modal {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: top center;
+}
+
+button.close_modal {
+    background: unset;
+    border: unset;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 25px;
+    opacity:0.7;
+    transition:all 0.2s
+}
+button.close_modal:hover {
+    opacity:1;
+}
+/* about */
 .content{
     width: 100%;
     min-height: 100vh;
@@ -182,6 +273,7 @@ h2.title_aboutme:before, h2.title_contactme:before{
 
 .img_forme,.info {
     width: 50%;
+    position: relative;
 }
 
 .info {
@@ -192,10 +284,6 @@ h2.title_aboutme:before, h2.title_contactme:before{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
-}
-
-.img_forme,.info {
-    width: 50%;
 }
 
 .info {
@@ -230,6 +318,7 @@ table.list_infos {
 .list_infos td:nth-child(2){
     margin-left:15px    
 }
+
 /* page contact  */
 h2.title_contactme:before{
     content: "Contact-me";
@@ -336,20 +425,23 @@ input.btn-submit {
     .div_form form > div:nth-child(4) {
         margin-bottom: 0px;
     }
+    /* modal */
+    img.myimg-modal {
+        max-width: 400px;
+        max-height: 400px;
+    }
+    .modal_img.showmodal {
+        position: fixed;
+        padding: 20px;
+    }
 }
 @media screen and (max-width : 500px){
     .section_content {
         width: 100%;
     }
-    .list_infos td{
-        width:100%;
-        text-align:center;
-    }
+    
     .list_infos td:nth-child(2) {
         margin-left: 0px;
-    }
-    .list_infos td {
-        text-align: left;
     }
     .info-about-me {
         margin-top: 30px;
@@ -358,4 +450,9 @@ input.btn-submit {
         padding: 0%;
     }
 }
-
+@media screen and (max-width : 340px){
+    .list_infos td{
+        width:100%;
+        text-align: left;
+    }
+}
