--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -107,6 +107,22 @@ ul.listmenu li.active a,ul.listmenu li:hover a{
     margin-left: 10px;
 }
 button.head_header,.burger-menu{display: none;}
+/* lightmode */
+
+.light-mode {
+    position: fixed;
+    right: 0px;
+    top: 100px;
+    z-index: 9999;
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    background: #431e1e;
+    padding: 5px 15px;
+    box-shadow: 0px 0px 15px #ff000073;
+}
+
+
 /* responsive navbar */
 @media screen and (max-width:800px){
     .section_header {
