--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -391,6 +391,26 @@ input.btn-submit {
 .div_form form div:last-child:hover:before {
     width:100%;
 }
+.contact-done {
+    position: fixed;
+    right: 0px;
+    top: 11px;
+    padding: 10px 15px;
+    background: #28a745;
+    font-size: 16px;
+    z-index: 99;
+    transform: translateX(100%);
+    transition: all 0.4s;
+}
+.contact-done.succ {
+    background: #28a745;
+    transform: translateX(0%);
+}
+.contact-done.inv {
+    background: #dc3545;
+    transform: translateX(0%);
+}
+
 /* responsive */
 
 @media screen and (max-width : 1500px){
