--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -1,3 +1,15 @@
+/* cursor */
+
+.spanmove{
+    position: absolute ;
+    height: 10px;
+    width: 10px;
+    background-color: var(--awb-color1);
+    opacity: 0.5;
+    border-radius: 50%;
+    z-index: 99;
+  }
+  /* end */
 /* for all page */
 @import url('Snake.css');
 :root {
