--- a/src/styles/pages.css
+++ b/src/styles/pages.css
@@ -8,6 +8,7 @@
     opacity: 0.5;
     border-radius: 50%;
     z-index: 99;
+    transform: translate(2px, 2px);
   }
   /* end */
 /* for all page */
